--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -1,3 +1,16 @@
+/* Intro */
+
 #introduction{
     font-size: 40px;
+    width: 100%;
+    height: 800px;
+    background-color: burlywood;
 }
+
+
+
+/* Experience */
+
+/* Skills */
+
+/* Education */
